# agentspec

./: .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  SKILL.md  mkdocs.yml  pyproject.toml
.cli/: README.md  commands.json
.cli/examples/: extend.sh  init.sh  pull.sh  push.sh  resolve.sh  run.sh  schema.sh  search.sh  validate.sh
.github/workflows/: docs.yml  quickstart.yml  release.yml
corpus/: extract-regex.yaml  fastapi-anomaly-endpoint.yaml  palindrome.yaml  ui-components-inventory.yaml
demo/: pitch-smoke.sh
docs/: CNAME  index.md
docs/agents/: create-an-agent.md  debug-a-failed-run.md  resolve-and-run.md
docs/api/: models.md  profile.md  resolver.md
docs/cli/: commands.md  overview.md
docs/concepts/: format.md  inheritance.md  noether.md  profiles.md  resolver.md
docs/ecosystem/: comparison.md  overview.md
docs/getting-started/: first-agent.md  install.md  quickstart.md
docs/guides/: bases.md  cold-start.md  multi-runtime.md  registry.md  sprints.md  vertex-ai.md
docs/proposals/: 001-execution-records.md  002-trust-enforcement-via-noether.md
docs/tutorial/: concepts.md  full-pipeline.md  index.md  when-things-go-wrong.md
examples/: coder.agent  data-analyst.agent  fastapi-dev.agent  legal-researcher.agent  orchestrator.agent  researcher.agent
examples/bases/: claude-noether.agent  claude.agent  codex-noether.agent  codex.agent  gemini-noether.agent  gemini.agent  local-noether.agent  local.agent
examples/researcher/: RULES.md  SOUL.md  agent.yaml
registry/: index.json
schemas/: agent-v1.json
src/agentspec/: __init__.py  __main__.py
src/agentspec/cli/: __init__.py  main.py
src/agentspec/gym/: __init__.py  assertions.py  runner.py  task.py
src/agentspec/lock/: __init__.py  manager.py  models.py
src/agentspec/parser/: __init__.py  loader.py  manifest.py
src/agentspec/profile/: __init__.py  manager.py  models.py  signing.py
src/agentspec/records/: __init__.py  manager.py  models.py
src/agentspec/registry/: __init__.py  client.py  server.py  storage.py
src/agentspec/resolver/: __init__.py  merger.py  resolver.py  vertex.py
src/agentspec/resolver/providers/: __init__.py
src/agentspec/runner/: __init__.py  isolation.py  noether_adapter.py  provisioner.py  runner.py
stages/: evolve.py  hash.py  merge.py  profile_create.py  profile_export.py  profile_retro.py  resolve.py  schema.py  validate.py
stages/specs/: agentspec_evolve.json  agentspec_hash.json  agentspec_merge.json  agentspec_profile_create.json  agentspec_profile_export.json  agentspec_profile_retro.json  agentspec_resolve.json  agentspec_schema.json  agentspec_validate.json
tests/: test_cli.py  test_cli_isolation.py  test_cli_lock.py  test_cli_records.py  test_gemini_cli.py  test_gym.py  test_isolation.py  test_issue_opencode_and_fallback.py  test_lock.py  test_merger.py  test_multi_cli_parity.py  test_noether_adapter.py  test_parser.py  test_profile_manager.py  test_provisioner.py  test_records.py  test_registry_auth.py  test_registry_multitenant.py  test_registry_pull_roundtrip.py  test_resolver.py  test_runner_isolation.py  test_runner_noether.py  test_runner_records.py  test_signing.py  test_test_echo_runtime.py  test_vertex.py
