[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentspec-alpibru"
version = "0.4.1"
description = "Universal agent manifest standard with resolver, signed profiles, and Noether composition — the missing layer between agent definitions and runtimes. (Import as `agentspec`.)"
readme = "README.md"
license = "EUPL-1.2"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Alfonso Sastre", email = "alfonso@alpibru.com" }]
maintainers = [{ name = "Alpibru", email = "hello@alpibru.com" }]
keywords = [
    "agent", "ai-agent", "agent-manifest", "agent-resolver",
    "llm", "mcp", "orchestration", "claude", "gemini", "ollama",
    "noether", "agentspec",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "acli-spec>=0.4.0",
    "typer>=0.9",
    # PyNaCl is the only signing backend — see agentspec/profile/signing.py.
    # The HMAC fallback was removed in 0.4.1 because it silently rubber-stamped
    # any 64-char-hex signature; PyNaCl is no longer optional.
    "PyNaCl>=1.5",
]

[project.urls]
Homepage = "https://www.alpibru.com"
Documentation = "https://alpibrusl.github.io/agentspec/"
Repository = "https://github.com/alpibrusl/agentspec"
Issues = "https://github.com/alpibrusl/agentspec/issues"
Changelog = "https://github.com/alpibrusl/agentspec/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]
signing = [
    # Kept for backwards-compatible `pip install "agentspec-alpibru[signing]"`
    # one-liners that existed before PyNaCl became a core dep. No-op extra.
]
registry = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
docs = [
    "mkdocs-material>=9.5",
]

[project.scripts]
agentspec = "agentspec.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentspec"]

[tool.hatch.build.targets.sdist]
include = [
    "src/agentspec",
    "schemas",
    "examples",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]
exclude = [
    "registry/agents",
    "registry/index.json",
    ".venv",
    "site",
    "tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B"]
ignore = ["S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
